[project]
name = "runqy-task"
version = "0.1.0"
description = "Python SDK for runqy-worker tasks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[project.urls]
Repository = "https://github.com/Publikey/runqy-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runqy_task"]
