[project]
name = "runqy-python"
version = "0.2.0"
description = "Python SDK for runqy - write distributed task handlers with simple decorators"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
    {name = "Publikey"}
]
keywords = ["task-queue", "distributed", "worker", "redis", "async", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://docs.runqy.com"
Repository = "https://github.com/Publikey/runqy-python"
Issues = "https://github.com/Publikey/runqy-python/issues"

[build-system]
requires = ["setuptools>=61.0,<75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
